--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<h1>Books</h1>
+
+
+
+<% @books.each do |book| %>
+  <div>
+    <p>投稿ユーザー画像：<%= image_tag 'no_image.jpg' %></p>
+    <p>題名：<%= book.title %></p>
+    <p>説明：<%= book.body %></p>
+    <p>ユーザーネーム：<%= book.user.name %></p>
+  </div>
+<% end %>
