--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,10 +1,8 @@
-<h1>画像投稿フォーム</h1>
-<%= form_with model: @post_image do |f| %>
-  <h4>画像</h4>
-  <%= f.file_field :image, accept: "image/*" %>
-  <h4>ショップ名</h4>
-  <%= f.text_field :shop_name %>
-  <h4>説明</h4>
-  <%= f.text_area :caption %>
-  <%= f.submit '投稿' %>
+<h1>New Book</h1>
+<%= form_with model: @book do |f| %>
+  <h4>Title</h4>
+  <%= f.text_field :title %>
+  <h4>Opinion</h4>
+  <%= f.text_area :body %>
+  <%= f.submit 'Create Book' %>
 <% end %>
