--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,22 +13,47 @@
 
   <body>
     <header>
-    <% if user_signed_in? %>
       <li>
-        <%= link_to '投稿フォーム', new_book_path %>
+        <%= link_to "Bookers", url="/" %>
       </li>
       <li>
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+        <%= link_to "Home", url="/" %>
+      </li>
+    <% if user_signed_in? %>
+      <li>
+        <%= link_to "Users", users_path %>
+      </li>
+      <li>
+        <%= link_to "Books", books_path %>
+      </li>
+      <li>
+        <%= link_to "Log out", destroy_user_session_path, method: :delete %>
       </li>
     <% else %>
       <li>
-        <%= link_to "新規登録", new_user_registration_path %>
+        <%= link_to "About", about_path %>
       </li>
       <li>
-        <%= link_to "ログイン", new_user_session_path %>
+        <%= link_to "Sign up", new_user_registration_path %>
+      </li>
+      <li>
+        <%= link_to "Log in", new_user_session_path %>
       </li>
     <% end %>
   </header>
     <%= yield %>
   </body>
+  <main>
+    <!--サイドバー-->
+    <!--
+    <h1>New Book</h1>
+    <%= form_with model: @book do |f| %>
+      <h4>Title</h4>
+      <%= f.text_field :title %>
+      <h4>Opinion</h4>
+      <%= f.text_area :body %>
+      <%= f.submit 'Create Book' %>
+    <% end %>
+    -->
+  </main>
 </html>
