--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<div class="col-md-8">
+  <h2>Book detail</h2>
+  <table>
+    <tr>
+      <td style="width:17px;">
+        <%= image_tag 'no_image.jpg' %>
+      </td>
+      <td style="width:30px;"><%= @book.title %></td>
+      <td><%= @book.body %></td>
+    </tr>
+  </table>
+</div>
