--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,59 @@
-<h1>Books</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <div><%= image_tag 'no_image.jpg' %></div>
+      <table class="table">
+        <tbody>
+          <tr>
+            <th>name</th>
+            <th><%= current_user.name %></th>
+          </tr>
+          <tr>
+            <th>introduction</th>
+            <th></th>
+          </tr>
+        </tbody>
+      </table>
+      <h2>New book</h2>
+        <%= form_with model: @book, url: books_path do |f| %>
+          <p>Title</p>
+          <%= f.text_field :title, name: 'book[title]' %>
+          <p>Opinion</p>
+          <%= f.text_area :body, name: 'book[body]' %>
+          <%= button_tag " Create Book ", type: :submit %>
+        <% end %>
+    </div>
 
+    <div class="col-md-1"></div>
 
-
-<% @books.each do |book| %>
-  <div>
-    <p>投稿ユーザー画像：<%= image_tag 'no_image.jpg' %></p>
-    <p>題名：<%= book.title %></p>
-    <p>説明：<%= book.body %></p>
-    <p>ユーザーネーム：<%= book.user.name %></p>
+    <div class="col-md-8">
+      <h1>Books</h1>
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+            <th style="width:17%;"></th>
+            <th style="width:30%">Title</th>
+            <th>Opinion</th>
+            <th class="colspan-3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+            <tr>
+              <td style="width:100px;height:100px;">
+                <%= image_tag 'no_image.jpg' %>
+              </td>
+              <td>
+                <%= book.title %>
+              </td>
+              <td>
+                <%= book.body %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
-<% end %>
+</div>
