--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,12 +1,31 @@
-<div class="col-md-8">
-  <h2>Book detail</h2>
-  <table>
-    <tr>
-      <td style="width:17px;">
-        <%= image_tag 'no_image.jpg' %>
-      </td>
-      <td style="width:30px;"><%= @book.title %></td>
-      <td><%= @book.body %></td>
-    </tr>
-  </table>
+<div class="container">
+  <div class="row">
+
+    <%= render 'side-bar', book: Book.new %>
+
+    <div class="col-md-8">
+      <h2>Book detail</h2>
+      <table>
+        <tr>
+          <th style="width:17%;"></th>
+          <th style="width:30%"></th>
+          <th></th>
+          <th class="colspan-3"></th>
+        </tr>
+        <tr>
+          <td>
+            <%= image_tag 'no_image.jpg' %>
+          </td>
+          <td><%= @book.title %></td>
+          <td><%= @book.body %></td>
+          <td>
+            <%= link_to 'Edit', edit_book_path(@book.id) %>
+          </td>
+          <td>
+            <%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: "本当に消しますか？" } %>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
 </div>
