--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,7 @@
-<h1>Users</h1>
+<div class="container">
+  <div class="row">
+    <%= render 'books/side-bar', book: @book %>
+    <h1>Users</h1>
+
+  </div>
+</div>
