--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -20,7 +20,7 @@
                 <%= image_tag 'no_image.jpg' %>
               </td>
               <td>
-                <%= book.title %>
+                <%= link_to @book.title, book_path(@book.id) %>
               </td>
               <td>
                 <%= book.body %>
