--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,25 +5,22 @@
 
     <div class="col-md-8">
       <h2>Book detail</h2>
-      <table>
-        <tr>
-          <th style="width:17%;"></th>
-          <th style="width:30%"></th>
-          <th></th>
-          <th class="colspan-3"></th>
-        </tr>
-        <tr>
+      <table style="width:100%;">
+        <tr class="book-show-tr">
           <td>
             <%= image_tag 'no_image.jpg' %>
           </td>
-          <td><%= @book.title %></td>
+          <td><%= link_to @book.title, book_path(@book.id) %></td>
           <td><%= @book.body %></td>
           <td>
-            <%= link_to 'Edit', edit_book_path(@book.id) %>
+            <%= link_to 'Edit', edit_book_path(@book.id), class: 'green-button' %>
           </td>
           <td>
-            <%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: "本当に消しますか？" } %>
+            <%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: "本当に消しますか？" }, class: 'red-button' %>
           </td>
+        </tr>
+        <tr>
+          <td><%= link_to @book.user.name, user_path(@book.user.id) %></td>
         </tr>
       </table>
     </div>
