--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,34 @@
 <div class="container">
   <div class="row">
-    <%= render 'books/side-bar', book: @book %>
-    <h1>Users</h1>
+    <%= render 'books/side-bar', book: @book, su: current_user %>
+
+    <div class="col-md-8">
+      <h2>Users</h2>
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+            <th style="width:30%;">image</th>
+            <th style="width:45%;">name</th>
+            <th style="width:25%;"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @users.each do |user| %>
+            <tr>
+              <td style="width:100px;height:100px;">
+                <%= image_tag user.get_profile_image %>
+              </td>
+              <td>
+                <%= user.name %>
+              </td>
+              <td>
+                <%= link_to 'Show', user_path(user.id) %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
 
   </div>
 </div>
