--- a/app/views/books/_side-bar.html.erb
+++ b/app/views/books/_side-bar.html.erb
@@ -1,18 +1,21 @@
 <div class="col-md-3">
   <h2>User info</h2>
-  <div><%= image_tag 'no_image.jpg' %></div>
+  <div><%= image_tag su.get_profile_image %></div>
   <table class="table">
     <tbody>
       <tr>
         <th>name</th>
-        <th><%= current_user.name %></th>
+        <th><%= su.name %></th>
       </tr>
       <tr>
         <th>introduction</th>
-        <th></th>
+        <th><%= su.introduction %></th>
       </tr>
     </tbody>
   </table>
+  <%= link_to edit_user_path(su.id), class: "edit-user-button" do %>
+    <i class="fa-solid fa-user-gear"></i>
+  <% end %>
   <h2>New book</h2>
     <%= form_with model: book, url: books_path do |f| %>
       <p>Title</p>
