--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="row">
-    <%= render 'side-bar', book: @book %>
+    <%= render 'side-bar', book: @book, su: current_user %>
 
     <div class="col-md-8">
-      <h1>Books</h1>
+      <h2>Books</h2>
       <table class="table table-hover table-inverse">
         <thead>
           <tr>
             <th style="width:17%;"></th>
-            <th style="width:30%">Title</th>
+            <th style="width:30%;">Title</th>
             <th>Opinion</th>
             <th class="colspan-3"></th>
           </tr>
@@ -17,10 +17,10 @@
           <% @books.each do |book| %>
             <tr>
               <td style="width:100px;height:100px;">
-                <%= image_tag 'no_image.jpg' %>
+                <%= image_tag book.user.get_profile_image %>
               </td>
               <td>
-                <%= link_to @book.title, book_path(@book.id) %>
+                <%= link_to book.title, book_path(book.id) %>
               </td>
               <td>
                 <%= book.body %>
