--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,34 @@
-<h3><%= @user.name %></h3>
+<div class="container">
+  <div class="row">
+
+    <%= render 'books/side-bar', book: @book, su: @user %>
+
+    <div class="col-md-8">
+      <h2>Books</h2>
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+            <th style="width:17%;"></th>
+            <th style="width:30%;">Title</th>
+            <th>Opinion</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @user.books.all.each do |book| %>
+            <tr>
+              <td style="width:100px;height:100px;">
+                <%= image_tag @user.get_profile_image %>
+              </td>
+              <td>
+                <%= link_to book.title, book_path(book.id) %>
+              </td>
+              <td>
+                <%= book.body %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
