--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -46,6 +46,15 @@ button[type="submit2"]{
   padding: 5px 8px;
 }
 
+button[type="submit3"]{
+  background-color: #888;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-size: 14px;
+  padding: 5px 8px;
+}
+
 .red-button{
   background-color: #f64;
   border: none;
