--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,30 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <h2>User info</h2>
+
+      <%= form_with model: @user do |f| %>
+
+      <div class="ed-fo">
+        <p>Name</p>
+        <%= f.text_field :name, style: "width:100%;" %>
+      </div>
+
+      <div class="ed-fo">
+        <p>Image</p>
+        <%= f.file_field :profile_image %>
+      </div>
+
+      <div class="ed-fo">
+        <p>Introduction</p>
+        <%= f.text_area :introduction, style: "width:100%;" %>
+      </div>
+
+      <%= button_tag " Update User ", type: :submit3 %>
+      <% end %>
+
+    </div>
+    <div class="col-md-3"></div>
+  </div>
+</div>
