--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,6 +77,10 @@
       </nav>
     </header>
 
+    <div class="notice">
+      <%= flash[:notice] %>
+    </div>
+
     <main>
       <%= yield %>
     </main>
