--- a/app/views/books/_side-bar.html.erb
+++ b/app/views/books/_side-bar.html.erb
@@ -13,9 +13,12 @@
       </tr>
     </tbody>
   </table>
-  <%= link_to edit_user_path(su.id), class: "edit-user-button" do %>
+
+
+  <%= link_to edit_user_path(su.id), class: "edit-user-button", style: "width: 100%;" do %>
     <i class="fa-solid fa-user-gear"></i>
   <% end %>
+
   <h2>New book</h2>
     <%= form_with model: book, url: books_path do |f| %>
       <p>Title</p>
