--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,14 @@
+<div>
+  <% if @book.errors.any? %>
+    <ul class="alert" role="alert">
+      <h2 class="alert-heading"><%= @book.errors.count %> errors prohibited this obj from being saved:</h2>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
+</div>
+
 <div class="container">
   <div class="row">
     <div class="col-md-3"></div>
