--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,17 @@
+<div>
+  <% if @book.errors.any? %>
+    <ul class="alert" role="alert">
+      <h2 class="alert-heading"><%= @book.errors.count %> errors prohibited this obj from being saved:</h2>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
+</div>
+
 <div class="container">
   <div class="row">
-    <%= render 'side-bar', book: @book, su: current_user %>
+    <%= render 'side-bar', book: @book, su: current_user, form_data: @book %>
 
     <div class="col-md-8">
       <h2>Books</h2>
