--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
 
-    <%= render 'side-bar', book: Book.new, su: current_user %>
+    <%= render 'side-bar', book: Book.new, su: @book.user %>
 
     <div class="col-md-8">
       <h2>Book detail</h2>
