--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -13,10 +13,14 @@
           <td><%= link_to @book.title, book_path(@book.id) %></td>
           <td><%= @book.body %></td>
           <td>
-            <%= link_to 'Edit', edit_book_path(@book.id), class: 'green-button' %>
+            <% if @book.user == current_user %>
+              <%= link_to 'Edit', edit_book_path(@book.id), class: 'green-button' %>
+            <% end %>
           </td>
           <td>
-            <%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: "本当に消しますか？" }, class: 'red-button' %>
+            <% if @book.user == current_user %>
+              <%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: "本当に消しますか？" }, class: 'red-button' %>
+            <% end %>
           </td>
         </tr>
         <tr>
