--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,23 @@
-<h1>welcome to Bookers !!</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <h1>welcome to <i class="fa-solid fa-book"></i><strong>Bookers!</strong></h1>
+
+      <p class="app-intro">
+        In <i class="fa-solid fa-book"></i><strong>Bookers!</strong>,<br>
+        you can share and exchange your opinions , inpressions , and emotions
+        about various books!
+      </p>
+
+      <%= link_to new_user_session_path, class: "log-in-button", style: "width: 100%;" do %>
+        <p>Log in</p>
+      <% end %>
+
+      <%= link_to new_user_registration_path, class: "sign-up-button", style: "width: 100%;" do %>
+        <p>Sign up</p>
+      <% end %>
+    </div>
+    <div class="col-md-3"></div>
+  </div>
+</div>
