--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -34,7 +34,7 @@
         <%= f.text_area :introduction, style: "width:100%;" %>
       </div>
 
-      <%= button_tag " Update User ", type: :submit3 %>
+      <%= f.submit class:"btn btn-secondary" %>
       <% end %>
 
     </div>
