--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="height:56px;">
         <div class="container">
 
-          <%= link_to root_path, class: "text-decoration-none large-text" do %>
+          <%= link_to root_path, class: "text-decoration-none large-text text-white" do %>
             Bookers
           <% end %>
           <div class="collapse navbar-collapse">
