--- a/app/views/books/_side-bar.html.erb
+++ b/app/views/books/_side-bar.html.erb
@@ -28,4 +28,4 @@
       <%= button_tag " Create Book ", type: :submit %>
     <% end %>
 </div>
-<div class="col-md-1"></div>
+<div class="offset-md-1"></div>
