--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,7 +13,7 @@
   <div class="row">
     <%= render 'side-bar', book: @book, su: current_user, form_data: @book %>
 
-    <div class="col-md-8">
+    <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
       <table class="table table-hover table-inverse">
         <thead>
@@ -28,7 +28,7 @@
           <% @books.each do |book| %>
             <tr>
               <td style="width:100px;height:100px;">
-                <%= link_to book_path(book.id) do %>
+                <%= link_to user_path(book.user) do %>
                   <%= image_tag book.user.get_profile_image %>
                 <% end %>
               </td>
