--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,12 +3,14 @@
 
     <%= render 'side-bar', book: Book.new, su: @book.user %>
 
-    <div class="col-md-8">
+    <div class="col-md-8 offset-md-1">
       <h2>Book detail</h2>
       <table style="width:100%;">
         <tr class="book-show-tr">
           <td>
-            <%= image_tag 'no_image.jpg' %>
+            <%= link_to user_path(@book.user) do %>
+              <%= image_tag @book.user.get_profile_image %>
+            <% end %>
           </td>
           <td><%= link_to @book.title, book_path(@book.id) %></td>
           <td><%= @book.body %></td>
