--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <%= render 'books/side-bar', book: @book, su: current_user %>
 
-    <div class="col-md-8">
+    <div class="col-md-8 offset-md-1">
       <h2>Users</h2>
       <table class="table table-hover table-inverse">
         <thead>
