--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 
     <%= render 'books/side-bar', book: @book, su: @user %>
 
-    <div class="col-md-8">
+    <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
       <table class="table table-hover table-inverse">
         <thead>
@@ -17,7 +17,9 @@
           <% @user.books.all.each do |book| %>
             <tr>
               <td style="width:100px;height:100px;">
-                <%= image_tag @user.get_profile_image %>
+                <%= link_to user_path(book.user) do %>
+                  <%= image_tag @user.get_profile_image %>
+                <% end %>
               </td>
               <td>
                 <%= link_to book.title, book_path(book.id) %>
